INCLUDE($ENV{CMAKE}/common/prep.cmake)

#设置版本号，和向下兼容性
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(VERSION 2.8)

#project name :EACPDAEMON
PROJECT(EACPDAEMON)

SET(NEED_ACE TRUE)
SET(NEED_XPCOM TRUE)
SET(NEED_CFL TRUE)
SET(NEED_SYSWRAP TRUE)
SET(NEED_NCUTIL TRUE)
SET(NEED_BOOST TRUE)
SET(ENABLE_C++11 TRUE)
SET(NEED_UMM TRUE)
SET(NEED_EDATAAPI TRUE)
SET(NEED_LIBEVENT TRUE)
SET(NEED_OPENSSL TRUE)
SET(NEED_BRPC TRUE)

SET(NEED_EHTTPSERVER TRUE)
SET(NEED_EACHTTPSERVER TRUE)
SET(NEED_ETHRIFT TRUE)
SET(NEED_THRIFTAPI TRUE)

#target name:eacpdaemon
SET(TARGET_NAME eacpdaemon)
SET(LINK_EACHTTPSERVER_LIBS eachttpserver)

INCLUDE_DIRECTORIES($ENV{SHARESERVER}/src)

INCLUDE_DIRECTORIES($ENV{DATAENGINEIOC})

# 编译可执行程序
SET(TARGET_TYPE RUNTIME)

ADD_DEFINITIONS("-I$ENV{SHARESERVER}")

INCLUDE($ENV{CMAKE}/common/target.cmake)

INSTALL(FILES shell/eacpserver0 DESTINATION app/eacp/boost
				PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
				GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ
)

INSTALL(FILES shell/eacpserver1 DESTINATION app/eacp/bin
				PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
				GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ
)

INSTALL(TARGETS eacpdaemon DESTINATION app/eacp/bin
				PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
				GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ
)

